exports[`(.not).toHaveBadRequestStatus > using axios > .not.toHaveBadRequestStatus > fails when response have status code 400 1`] = `
<dim>expect(</intensity><red>received</color><dim>).not.toHaveBadRequestStatus()</intensity>

Expected status code to not be 400 received:
  <red>400</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 400,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;

exports[`(.not).toHaveBadRequestStatus > using axios > .toHaveBadRequestStatus > fails when response have other status code 1`] = `
<dim>expect(</intensity><red>received</color><dim>).toHaveBadRequestStatus()</intensity>

Expected status code to be 400 received:
  <red>200</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 200,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": {}
}
`;

exports[`(.not).toHaveBadRequestStatus > using got > .not.toHaveBadRequestStatus > fails when response have status code 400 1`] = `
<dim>expect(</intensity><red>received</color><dim>).not.toHaveBadRequestStatus()</intensity>

Expected status code to not be 400 received:
  <red>400</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 400,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": "{}"
}
`;

exports[`(.not).toHaveBadRequestStatus > using got > .toHaveBadRequestStatus > fails when response have other status code 1`] = `
<dim>expect(</intensity><red>received</color><dim>).toHaveBadRequestStatus()</intensity>

Expected status code to be 400 received:
  <red>200</color>

------------
response is:
{
  "url": "http://127.0.0.1:54607/status",
  "status": 200,
  "headers": {
    "content-type": "application/json; charset=utf-8",
    "content-length": "2",
    "connection": "keep-alive"
  },
  "body": "{}"
}
`;
